feat:Funciones para versionamiento de planes
